--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p><input required type="text" name="name" placeholder="Adı"></p>
       <p><input required type="text" name="summary" placeholder="Konu"></p>
       <p><input required type="number" name="score" placeholder="Puan"></p>
-      <p><input required type="text" name="poster" placeholder="Poster"></p>
+      <p><input required type="text" name="poster" placeholder="Poster" value="https://picsum.photos/id/237/150/200"></p>
       <p><button>Ekle</button></p>
     </form>
   </dialog>
