--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
   </div>
 
   <dialog id="modal">
-    <h2>Film Ekle</h2>
+    <h2 class="modelAddNew">Film Ekle</h2>
+    <h2 class="modelEdit">Filmi Düzenle</h2>
     <form method="dialog" autocomplete="off" id="addMovieForm">
       <p><input required type="text" name="name" placeholder="Adı"></p>
       <p><input required type="text" name="summary" placeholder="Konu"></p>
       <p><input required type="number" name="score" placeholder="Puan"></p>
       <p><input required type="text" name="poster" placeholder="Poster"></p>
-      <p><button>Ekle</button> <button type="button" onclick="addMovieForm.reset();modal.close();">Vazgeç</button></p>
+      <p><button class="modelAddNew">Ekle</button> <button class="modelEdit">Kaydet</button> <button type="button" onclick="addMovieForm.reset();modal.close();">Vazgeç</button></p>
       <input type="hidden" name="id" value="">
     </form>
   </dialog>
